<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FM Radio</string>
    <string name="favorite_manager">Channel list</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="add_to_favorite1">Add to preset channels</string>
    <string name="optmenu_search">Auto Search</string>
    <string name="optmenu_exit">Exit</string>
    <string name="contmenu_title">Operations</string>
    <string name="contmenu_item_edit">Edit</string>
    <string name="contmenu_item_delete">Delete</string>
    <string name="contmenu_item_delete1">Remove from preset channels</string>
    <string name="dlg_noantenna_text">The earphone is used as antenna of FM radio. Do you want to continue without earphone?</string>
    <string name="dlg_noantenna_title">Plug in earphone</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="dlg_progress_title">Scan</string>
    <string name="dlg_progress_text">Scan channels…</string>
    <string name="dlg_addedit_station_name">Name:</string>
    <string name="dlg_addedit_station_freq">Frequency:</string>
    <string name="dlg_addedit_title_edit">Edit Channel</string>
    <string name="default_station_name">New Channel</string>
    <string name="dlg_delete_confirm_title">Confirm remove from favorites</string>
    <string name="dlg_delete_confirm_title1">Confirm remove from preset channels</string>
    <string name="dlg_delete_confirm_text">Are you sure you want to remove this channel from favorites?</string>
    <string name="dlg_delete_confirm_text1">Are you sure you want to remove the selected from preset channels?</string>
    <string name="toast_favorite_full">Cannot add the channel to favorite list because it is full.</string>
    <string name="toast_favorite_full1">Cannot add the channel to preset channel list because it is full.</string>
    <string name="toast_already_favorite">This channel is already in favorite list.</string>
    <string name="toast_already_favorite1">This channel is already in preset channel list.</string>
    <string name="toast_channel_deleted">Successfully removed from favorites.</string>
    <string name="toast_channel_deleted1">Successfully removed from preset channels.</string>
    <string name="toast_channel_added">Successfully added to favorites.</string>
    <string name="toast_channel_added1">Successfully added to preset channels.</string>
    <string name="toast_channel_searched">Searched out available channels:</string>
    <string name="toast_cannot_search">Cannot search out available channel.</string>
    <string name="toast_invalid_frequency">Invalid frequency for current location. Valid frequency scope: 87.5~108.0</string>
    <string name="optmenu_rds_settings">RDS settings</string>
    <string name="dlg_rds_settings_channel_information">Channel information</string>
    <string name="dlg_rds_settings_alternative_frequency">Alternative frequency</string>
    <string name="dlg_rds_settings_traffic_announcement">Traffic announcement</string>
    <string name="sound_mode">Sound mode</string>
    <string name="more">More</string>
    <string name="fm_recorder_name">FM Recorder</string>
    <string name="toast_recording_lost_warning">Your recording will be lost due to SD removal!</string>
    <string name="toast_start_recording">Start recording...</string>
    <string name="toast_sdcard_missing">Your SD card is missing!</string>
    <string name="toast_sdcard_insufficient_space">Insufficient SD card space!</string>
    <string name="toast_recorder_internal_error">An internal error occured in recorder!</string>
    <string name="toast_player_internal_error">An internal error occured in player!</string>
    <string name="toast_powerup_before_record_warning">Please power up FM first!</string>
    <string name="optmenu_record">Record FM</string>
    <string name="btn_save_recording">Save</string>
    <string name="btn_overwrite_recording">Overwrite</string>
    <string name="btn_discard_recording">Discard</string>
    <string name="edit_recording_name_hint">Type file name here</string>
    <string name="dlg_save_recording_title">Save recording file</string>
    <string name="dlg_save_recording_storage_warning">Insufficient storage! Do you want to save current recording?</string>
    <string name="toast_save_success">Successfully saved!</string>
    <string name="already_exists">already exists</string>
    <string name="FMR_Freq_text">Freq(MHz)</string>
    <string name="FMR_Freq_tune">Tune</string>
    <string name="FMR_Antenna_text">Antenna Type</string>
    <string name="FMR_Antenna_short">Short</string>
    <string name="FMR_Antenna_long">EarPhone</string>
    <string name="FMR_Status_text">Status</string>
    <string name="FMR_Force_Stereomono_text">Force Set:</string>
    <string name="FMR_Status_Stereomono_text">Stereo/Mono:</string>
    <string name="FMR_Stereomono_stereo">Stereo</string>
    <string name="FMR_Stereomono_mono">Mono</string>
    <string name="FMR_Status_Stereomono">detecting...</string>
    <string name="FMR_Status_RSSI_text">RSSI(dBm):</string>
    <string name="FMR_Status_RSSI">detecting...</string>
    <string name="FMR_Status_Caparray_text">CapArray(pF):</string>
    <string name="FMR_Status_Caparray">detecting...</string>
    <string name="FMR_RDS_text">RDS</string>
    <string name="FMR_RDS_Goodblock_text">Good Blocks:</string>
    <string name="FMR_RDS_Goodblock">detecting...</string>
    <string name="FMR_RDS_Badblock_text">Bad Blocks:</string>
    <string name="FMR_RDS_Badblock">detecting...</string>
    <string name="FMR_RDS_Ratio_text">Ratio:</string>
    <string name="FMR_RDS_Ratio">detecting...</string>
    <string name="FMR_RDS_PS_text">PS:</string>
    <string name="FMR_RDS_PS">None.</string>
    <string name="FMR_RDS_RT_text">RT:</string>
    <string name="FMR_RDS_RT">None.</string>
    <string name="FMR_Hardware_version">Hardware Version</string>
    <string name="FMR_Chip_ID_text">Chip ID</string>
    <string name="FMR_Chip_ID">None.</string>
    <string name="FMR_ECO_Version_text">ECO Version</string>
    <string name="FMR_ECO_Version">None.</string>
    <string name="FMR_Patch_Version_text">Patch Version</string>
    <string name="FMR_Patch_Version">None.</string>
    <string name="FMR_DSP_Version_text">DSP Version</string>
    <string name="FMR_DSP_Version">None.</string>
    <string name="optmenu_edit_mode">Select mode</string>
    <string name="optmenu_select_all">Select all</string>
    <string name="empty_list">Channel list is empty, please search radio stations or save current radio station.</string>
    <string name="record_empty_list">Recording list is empty!</string>
    <string name="input_hint1">input range: 87.5 ~ 108.0</string>
    <string name="input_hint2">input range: 0 ~ 9</string>
    <string name="input_error">Input range error, please enter again.</string>
    <string name="recording_select_multi">Multiselect</string>
    <string name="recording_select_selall">Select all</string>
    <string name="recording_select_unselall">Unselect all</string>
    <string name="recording_select_del">Delete</string>
    <string name="recording_rename">Rename</string>
    <string name="recording_use_as_ringtone">Set as ringtone</string>
    <string name="ringtone_set">"Set '%s' as ringtone."</string>
    <string name="recording_send">Send</string>
    <string name="recording_attr">Attribute</string>
    <string name="recording_delete_ask">Delete?</string>
    <string name="recording_deleteing">Please wait</string>
    <string name="recording_RenameFail">Rename failed</string>
    <string name="recording_AttrTitle">Name:</string>
    <string name="recording_AttrTime">Modification date:</string>
    <string name="recording_AttrSize">Size:</string>
    <string name="recording_NoSelItem">No items selected</string>
    <string name="file_duration_unknow">Unknown</string>
    <string name="audio_db_title_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="error_mediadb_new_record">Recorded audio cannot be saved</string>
    <string name="record_list">FM record list</string>
    <string name="record_not_support">Recording not supported!</string>
    <string name="channel_num">Number</string>
    <string name="channel_name">Channel infos</string>
    <string name="channel_collect_status">PreSet</string>
    <string name="channel_play_status">Play status</string>
    <string name="record_hour">h</string>
    <string name="record_minute">m</string>
    <string name="record_second">s</string>
    <string name="cannot_startup_during_airplane">Can not start FM in AirPlane mode!</string>
    <string name="durationformat">%2$d:%5$02d</string>
    <string name="menu_sleep_mode">Sleep Mode</string>
    <string name="sleep_setting_mode">Exit FM after:</string>
    <string name="close_sleep_setting">Close the sleep mode</string>
    <string name="sleep_setting_10">10 minutes</string>
    <string name="sleep_setting_30">30 minutes</string>
    <string name="sleep_setting_60">60 minutes</string>
    <string name="sleep_setting_90">90 minutes</string>
    <string name="sleep_setting_120">120 minutes</string>
    <string name="sleep_setting_toast">%d minutes later exit FM</string>
    <string name="sleep_setting_stop">Sleep mode closed</string>
</resources>
