<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/header_item" android:background="@drawable/top_bar_gb" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <CheckBox android:id="@id/ivSelectAll" android:focusable="false" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_alignParentRight="true" />
        <TextView android:textAppearance="?android:textAppearanceMediumInverse" android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/select_all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="12.0dip" android:text="@string/optmenu_select_all" android:singleLine="true" android:layout_alignParentLeft="true" android:layout_alignWithParentIfMissing="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/list_title" android:background="@drawable/top_bar_gb" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textSize="13.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/channel_num" android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textSize="13.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/channel_name" android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.1">
            <TextView android:textSize="13.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/channel_collect_status" android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <TextView android:textSize="13.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/channel_play_status" android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>
    <ListView android:textSize="18.0sp" android:id="@id/station_list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:drawSelectorOnTop="false" android:cacheColorHint="#00000000" android:layout_weight="1.0" android:fastScrollEnabled="true" />
    <LinearLayout android:id="@id/bottom_panel" android:background="@drawable/softkey_bg" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/delete" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/contmenu_item_delete" android:layout_weight="1.0" />
        <Button android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/btn_cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>