<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/fm_recording_layout" android:layout_width="286.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center" android:id="@id/fm_freq_num_pick_title" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="53.0dip" android:singleLine="true" style="?android:attr/windowTitleStyle" />
    <View android:background="#ffb93434" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/contentPanel" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:gravity="center" android:id="@id/fm_freq_num_pick_forward_part" android:layout_width="70.0dip" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="3" android:numeric="integer" />
        <ImageView android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/freq_pointer" />
        <EditText android:gravity="center" android:id="@id/fm_freq_num_pick_backward_part" android:layout_width="40.0dip" android:layout_height="wrap_content" android:singleLine="true" android:maxLength="1" android:numeric="integer" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_hint1" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="20.0dip" />
    <View android:background="#ffababab" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/fm_freq_num_pick_btn_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_ok" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
        <View android:background="#ffababab" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:id="@id/fm_freq_num_pick_btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_cancel" android:layout_weight="1.0" style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>